[package]
name = "kemuler"
version = "0.1.0"
edition = "2021"
description = "Experimental high level input emulation library"
authors = [ "Multirious" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
once_cell = "1.17"

enigo = { version = "0.1", optional = true }
inputbot = { version = "0.5", git = "https://github.com/obv-mikhail/InputBot", branch = "develop", optional = true }

[features]
default = ["enigo", "inputbot"]
enigo = ["dep:enigo"]
inputbot = ["dep:inputbot"]
