[package]
name = "kemuler"
version = "0.1.0"
edition = "2021"
description = "Experimental high level input emulation library"
authors = [ "Multirious" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
once_cell = "1.17"
enigo = { version = "0.1", optional = true }
inputbot = { version = "0.5", git = "https://github.com/obv-mikhail/InputBot", branch = "develop", optional = true }
parking_lot = "0.12"

[dev-dependencies]
windows = { version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading"] }
rand = "0.8.5"
device_query = "1.1.3"

[features]
default = ["enigo", "inputbot"]
enigo = ["dep:enigo"]
inputbot = ["dep:inputbot"]
