[package]
name = "kemuler"
version = "0.1.0"
edition = "2021"
description = "Experimental high level input simulation tool"
authors = [ "Multirious" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.enigo]
version = "0.1.1"
optional = true 

[dependencies.windows]
version = "0.48.0"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_Foundation",
  "Win32_System_Threading",
]
optional = true 

[build-dependencies]
rustc_version = "0.4.0"

[features]
default = ["enigo", "windows"]
# Use Enigo as simulator
enigo = ["dep:enigo"]

# Window inputs simulator
# This has different implementation to Enigo.
windows = ["dep:windows"]

[[example]]
name = "auto-clicker"
required-features = ["enigo"]

[[example]]
name = "mouse-circle"
required-features = ["enigo"]

[package.metadata.docs.rs]
all-features = true
